testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_identifier/case4.expect.out
error: expected identifier, found 'new line character'
  ==> case4.cj:14:3:
   | 
14 |     `
   |      ^ expected identifier
   | 

error: expected identifier, found 'new line character'
  ==> case4.cj:15:2:
   | 
15 | `
   |  ^ expected identifier
   | 

error: expected identifier, found 'new line character'
  ==> case4.cj:16:3:
   | 
16 |     `
   |      ^ expected identifier
   | 

3 errors generated, 3 errors printed.
